enforce business-level access for invoices